# krka_voucher

./: .gitignore  pyproject.toml
backend/: .~lock.Vaucer_za_npkrka.xlsx#  Vaucer_za_npkrka.xlsx  Vaucer_za_npkrka_original.xlsx  calc_dates.py  create_ticket.py  create_ticket_pw.py  data.json  db_engine.py  employees.csv  employees.db  gui.py  ht_guest_list.bat  ht_guest_list.vbs  ht_guest_list_json.py  ht_kamp_list.py  ht_room_list_local.py  room_list.py  rooms.db  write_data_excel.py
