[tool.poetry]
name = "krka-voucheri-v0-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "krka_voucheri_v0" }]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.3"
openpyxl = "^3.1.2"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
playwright = "^1.42.0"
rich = "^13.7.1"
requests = "^2.31.0"
pysimplegui = "4.47.0"
sqlalchemy = "^2.0.29"
schedule = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
